--- a/src/components/side-bar/side-bar.scss
+++ b/src/components/side-bar/side-bar.scss
@@ -1,7 +1,7 @@
 aside.side-bar {
-    @apply flex flex-col items-center bg-neutral-100 p-3 w-48 gap-5;
-    
-    .logo {
-        @apply my-2;
-    }
+  @apply flex flex-col items-center bg-neutral-100 p-3 w-48 gap-5 overflow-y-scroll h-full;
+
+  .logo {
+    @apply my-2;
+  }
 }
