--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,7 +1,7 @@
 input.input {
   @apply flex w-full rounded-md border border-input bg-background px-3  text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground disabled:cursor-not-allowed disabled:opacity-50;
 
-  & :focus-visible {
-    @apply outline-none  ring-2  ring-ring ring-offset-2;
+  &:focus-visible {
+    @apply outline-none  ring-2 ring-ring;
   }
 }
